# legendary-octo-happiness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: readme-persona-adopter.md  readme-persona-ai.md  readme-persona-ci-expert.md  readme-persona-evaluator.md  readme-persona-release-operator.md
.claude/commands/: review-readme.md
.claude/rules/: diataxis-review.md  docs-voice.md
.claude/skills/review-readme/: SKILL.md
.claude/skills/write-readme/: SKILL.md
.github/actions/changelog-commit/: .gitignore  action.yml  cliff.toml  package-lock.json  package.json
.github/actions/changelog-commit/src/: patch-config.ts
.github/actions/changelog-commit/tests/: patch-config.test.ts
.github/actions/checkout-version-tag/: action.yml
.github/workflows/: changelog.yml  ci.yml  conventional-label.yml  pr-title.yml  release.yml
src/legendary_octo_happiness/: __init__.py
