[project]
name = "legendary-octo-happiness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tai Sakuma" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"
