[project]
name = "legendary-octo-happiness"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tai Sakuma" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex_commit"
path = "src/legendary_octo_happiness/__about__.py"
tag_name = "u{new_version}"
tag_sign = false
