[project]
name = "legendary-octo-happiness"
dynamic = ["version"]
description = "Reference implementation of automated changelog and release workflows using Conventional Commits"
readme = "README.md"
authors = [{ name = "Tai Sakuma" }]
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.urls]
Repository = "https://github.com/TaiSakuma/legendary-octo-happiness"
Changelog = "https://github.com/TaiSakuma/legendary-octo-happiness/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex_commit"
path = "src/legendary_octo_happiness/__about__.py"
tag_name = "u{new_version}"
tag_sign = false
check_dirty = false
